Censure date validate current year start and end was fixed

--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -476,12 +476,12 @@
                     <div class="col-6" >
                       <label class="control-label" >
                         Responsibility</label >
-                      <p class="display_detail" data-th-utext="${performanceEvaluationRequest.responsibility}" ></p >
+                      <p class="display_detail" data-th-utext="${performanceEvaluationRequest.responsibility.responsibility}" ></p >
                     </div >
                     <div class="col-6" >
                       <label class="control-label" >
                         Tasks</label >
-                      <p class="display_detail" data-th-utext="${performanceEvaluationRequest.tasks}" ></p >
+                      <p class="display_detail" data-th-utext="${performanceEvaluationRequest.task.task}" ></p >
                     </div >
                   </div >
                 </div >
