--- a/src/main/resources/templates/mainWindow.html
+++ b/src/main/resources/templates/mainWindow.html
@@ -8,13 +8,13 @@
 
 <!--page content starts-->
 
-<div class="col-6">
-  <div class="card">
+<div class="container">
+  <div class="card" style="padding:50px;margin-left:100px;color: white;align-content: center">
     <div class="card-header">Department of Prisons</div>
 
   <!-- The prisons-->
 
-  <section id="tm-section-1" class="tm-section" style="margin-bottom:0px;margin-left:80px">
+  <section id="tm-section-1" class="tm-section" >
     <div class="ml-auto">
       <header class="mb-4"><h1 class="tm-text-shadow">Department of Prison </h1></header>
       <h2>Our Vision</h2>
@@ -33,11 +33,12 @@
 
       </p>
 
-
+s
     </div>
+  </section>
   </div>
 </div>
-  </section>
+
 <!--
 
     <div class="col-4">
