--- a/src/main/resources/static/css/myCss.css
+++ b/src/main/resources/static/css/myCss.css
@@ -8,31 +8,12 @@
 }
 
 /*login page start*/
-
-body{
-/*
-    background-image: url(../img/login.jpg);!important;
-    -webkit-background-size:cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-image: url(../img/formbg.png) ;*/
+/*body{
+   background-color: rgba(7, 4, 0, 0.96);
 
 
 
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-    font-size: 18px;
-    font-weight: 500;
-    color: rgb(0, 0, 0);
-    overflow-x: hidden;
-    min-height: 100vh;
-    height: 100%;
-    position: relative;
-    background-image: url(../img/formbg.png) ;!important;
-    background-size: cover;
-    background-repeat: no-repeat;
-
-}
+}*/
 .login-bg{
     background-image: url(../img/login3.jpg) ;!important;
 }
@@ -114,14 +95,11 @@ input{
 
 /*MainWindow Style - Start*/
 .mainbody{
-    background-image: url(../img/formbg.png);
+    background-image: url(../img/backmain2.jpg);
     -webkit-background-size:cover;
     background-size: cover;
     background-position:center center;
     background-repeat: no-repeat;
-
-
-
 }
 .card{
 
@@ -161,9 +139,25 @@ input{
 
 
 /* Navbar Style--START*/
+
 .navbar a{
     color: #070707;
 }
+
+
+.navbar{
+    background-color:rgba(9,22,21,0.97);
+
+}
+.dropdown-menu{
+    background-color: rgba(128, 75, 61, 0.72);
+    width: 250px;
+}
+.dropdown-menu a{
+    color:white!important;
+
+}
+
 /* Navbar Style--END*/
 
 /**login start*/
@@ -287,4 +281,9 @@ input{
 .required:after {
     content:" *";
     color: red;
+}
+
+.tableview{
+    border-radius:25px;
+
 }
