--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -7,7 +7,7 @@
 
 <nav class="navbar navbar-expand-sm navbar-dark " style="background-color:rgba(55,5,5,0.91);" data-th-fragment="navBarFragment">
 
-   <img data-th-src="${'/img/avatar.png'}"alt="Nav bar logo"width="40" height="45">
+   <img data-th-src="${'/img/avatar.png'}"alt="Nav bar logo" style="width:40px;height:50px;margin-right: 10px">
    <a class="navbar-brand" href="/home"><i class="fa fa-home" style="font-size: 18px"></i></a>
 
 
