--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -469,6 +469,32 @@
               <div class="form-row " >
                 <div class="col-md-6" >
                   <label class="control-label" data-th-for="${'taskLists'}" >Main Areas of Responsibility and Tasks
+                    :</label >
+                </div >
+                <div class="col-md-8" >
+                  <div class="form-row " >
+                    <div class="col-6" >
+                      <label class="control-label" >
+                        Responsibility</label >
+                      <p class="display_detail" data-th-utext="${performanceEvaluationRequest.responsibility}" ></p >
+                    </div >
+                    <div class="col-6" >
+                      <label class="control-label" >
+                        Tasks</label >
+                      <p class="display_detail" data-th-utext="${performanceEvaluationRequest.tasks}" ></p >
+                    </div >
+                  </div >
+                </div >
+              </div >
+              <!--Areas of Responsibility end-->
+
+
+
+
+             <!-- responsibilities
+              <div class="form-row " >
+                <div class="col-md-6" >
+                  <label class="control-label" data-th-for="${'taskLists'}" >Main Areas of Responsibility and Tasks
                                                                              :</label >
                 </div >
                 <div class="col-md-8" >
@@ -486,7 +512,7 @@
                   </div >
                 </div >
               </div >
-              <!--Areas of Responsibility end-->
+              Areas of Responsibility end-->
 
               <!--Mid Term Appraisal start-->
               <div class="container-fluid" >
