--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -64,6 +64,7 @@
                <a data-th-href="@{'/report/offenceCount'}" class="nav-link text-dark">Offence And Record Count </a>
                <a data-th-href="@{'/report/instituteCensure'}" class="nav-link text-dark">Institute Vs Censure count</a>
                <a data-th-href="@{'/report/instituteCensureOne'}" class="nav-link text-dark">Institute wise Censure count</a>
+               <a data-th-href="@{'/report/instituteCommendation'}" class="nav-link text-dark">Institute Vs Commendation Count count</a>
 
             </div>
          </li>
