PE Request overall apprecial was replaced with the label discipline

--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -868,7 +868,7 @@
                 <!--delegating-->
                 <div class="form-row " >
                   <div class="col-md-4" >
-                    <label class="control-label" >Overall Apprecial :</label >
+                    <label class="control-label" >Descipline :</label >
                   </div >
                   <div class="col-md-8" >
                     <p class="display_detail"
