--- a/src/main/resources/templates/employee/findEmployee.html
+++ b/src/main/resources/templates/employee/findEmployee.html
@@ -90,22 +90,22 @@
                 <th >
                   <a data-th-href="${'/employee/' + employee.id}" class="btn btn-success btn-sm" >&nbsp;View</a >
 
-                  <a data-th-href="${'/employee/edit/' + employee.id}" class="btn btn-success btn-sm" ><i
+                  <a data-th-href="${'/employee/edit/' + employee.id}" class="btn btn-primary btn-sm" ><i
                           class="fa fa-edit" ></i >&nbsp;Edit</a >
 
-                  <a data-th-href="${'/qualification/add/' + employee.id}" class="btn btn-success btn-sm" ><i
+                  <a data-th-href="${'/qualification/add/' + employee.id}" class="btn btn-secondary btn-sm" ><i
                           class="fa fa-edit" ></i >&nbsp;Add Qualification</a >
 
-                  <a data-th-href="${'/employeeLeave/add/' + employee.id}" class="btn btn-success btn-sm" ><i
+                  <a data-th-href="${'/employeeLeave/add/' + employee.id}" class="btn btn-warning btn-sm" ><i
                           class="fa fa-edit" ></i >&nbsp;Add Leave</a >
 
                   <a data-th-href="${'/employeeInstitute/add/' + employee.id}" class="btn btn-success btn-sm" ><i
                           class="fa fa-edit" ></i >&nbsp;Transfer</a >
 
-                  <a data-th-href="${'/censure/add/' + employee.id}" class="btn btn-success btn-sm" ><i
+                  <a data-th-href="${'/censure/add/' + employee.id}" class="btn btn-info btn-sm" ><i
                           class="fa fa-edit" ></i >&nbsp;Censure</a >
 
-                  <a data-th-href="${'/commendation/add/' + employee.id}" class="btn btn-success btn-sm" ><i
+                  <a data-th-href="${'/commendation/add/' + employee.id}" class="btn btn-danger btn-sm" ><i
                           class="fa fa-edit" ></i >&nbsp;Commendation</a >
 
                   <a data-th-href="${'/employee/remove/' + employee.id}"
