--- a/src/main/resources/templates/performanceEvaluation/addPerformanceEvaluationApproval.html
+++ b/src/main/resources/templates/performanceEvaluation/addPerformanceEvaluationApproval.html
@@ -561,7 +561,7 @@
               <!--delegating-->
               <div class="form-row " >
                 <div class="col-md-4" >
-                  <label class="control-label" for="overallApprecial" >Overall Apprecial :</label >
+                  <label class="control-label" for="overallApprecial" >Descipline :</label >
                 </div >
                 <div class="col-md-8" >
                   <div class="custom-control custom-checkbox custom-control-inline "
