--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -38,10 +38,12 @@
     <div class="card" >
       <div class="card-header" role="tab" id="section1HeaderId6" >
         <h5 class="mb-0 col-12 text-center" >
+
           <a data-toggle="collapse" data-parent="#accordianId6" href="#section1ContentId6" aria-expanded="true"
              aria-controls="section1ContentId6" >
             Employee Details
           </a >
+
         </h5 >
       </div >
       <div id="section1ContentId6" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId6" >
@@ -157,10 +159,10 @@
                 </div >
                 <div class="form-row text-right" >
                   <div class="col-md-4" >
-                    <label class="control-label" for="mobileTwo" >Mobile Two No :</label >
+                    <label class="control-label" for="wopNumber" >W&OP  Number:</label >
                   </div >
                   <div class="col-md-8" >
-                    <p id="mobileTwo" data-th-text="${employeeDetail.mobileTwo}" class="display_detail" ></p >
+                    <p id="wopNumber" data-th-text="${employeeDetail.wopNumber}" class="display_detail" ></p >
                   </div >
                 </div >
                 <div class="form-row text-right" >
