--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -60,7 +60,7 @@
             <div class="dropdown-menu text-dark" aria-labelledby="dropdownId">
                <a data-th-href="@{'/employee'}" class="nav-link text-dark">Employee Detail Report</a>
                <a data-th-href="@{'/report/instituteEmployee'}" class="nav-link text-dark"> Institute Headcount Report</a>
-               <a data-th-href="@{'/report/employeeAllCount'}" class="nav-link text-dark">Employee And Action </a>
+               <!--<a data-th-href="@{'/report/employeeAllCount'}" class="nav-link text-dark">Employee And Action </a>-->
                <a data-th-href="@{'/report/offenceCount'}" class="nav-link text-dark">Offence And Record Count </a>
                <a data-th-href="@{'/report/instituteCensure'}" class="nav-link text-dark">Institute Vs Censure count</a>
                <a data-th-href="@{'/report/instituteCensureOne'}" class="nav-link text-dark">Institute wise Censure count</a>
